--- a/docs/specs/source_2_stepper_rules.tex
+++ b/docs/specs/source_2_stepper_rules.tex
@@ -23,7 +23,7 @@ that has neither of these two forms, which corresponds to a runtime error.
 A \emph{value} is a primitive number expression,
 primitive boolean expression,
 a primitive string expression, a function definition
-expression or a function declaration statement.
+expression or a function declaration expression.
 
 The \emph{substitution} function
 $p [ n := v ]$ on programs/statements/expressions
