--- a/docs/specs/source_math.tex
+++ b/docs/specs/source_math.tex
@@ -14,6 +14,6 @@ JavaScript
 \end{itemize}
 \end{itemize}
 All math functions can be assumed to run in $O(1)$ time and are considered
-\textit{primitive}. All functions expect numbers as arguments and return numbers.
-We don't specify the behavior of the math functions when some arguments are
+\textit{primitive}. All math functions expect numbers as arguments and return numbers.
+We don't specify the behavior of a math functions when some arguments are
 not numbers.
