--- a/docs/specs/source_math.tex
+++ b/docs/specs/source_math.tex
@@ -15,5 +15,5 @@ JavaScript
 \end{itemize}
 All math functions can be assumed to run in $O(1)$ time and are considered
 \textit{primitive}. All math functions expect numbers as arguments and return numbers.
-We don't specify the behavior of a math functions when some arguments are
+We don't specify the behavior of a math function when some arguments are
 not numbers.
