Documentation: argument and return types of math functions (#1629)
* argument and return types of math functions

* argument and return types of math functions

* argument and return types of math functions

--- a/docs/specs/source_math.tex
+++ b/docs/specs/source_math.tex
@@ -13,5 +13,7 @@ JavaScript
 \item \verb#math_sqrt#\texttt{(n)}: \textit{primitive}, returns the square root of the \emph{number} \texttt{n}.
 \end{itemize}
 \end{itemize}
-All functions can be assumed to run in $O(1)$ time and are considered
-\textit{primitive}.
+All math functions can be assumed to run in $O(1)$ time and are considered
+\textit{primitive}. All math functions expect numbers as arguments and return numbers.
+We don't specify the behavior of a math function when some arguments are
+not numbers.
