--- a/docs/specs/source_arrays.tex
+++ b/docs/specs/source_arrays.tex
@@ -5,3 +5,6 @@ Arrays in Source are created using literal array expressions:
 let my_array_1 = [];
 let my_array_2 = [42, 71, 13];
 \end{lstlisting}
+Array access of the form $a$\lstinline{[}$i$\lstinline{]} has constant time complexity $\Theta(1)$.
+Array assignment the form $a$\lstinline{[}$n$\lstinline{] = }$x$ has a time complexity
+$O(n)$.
