Documentation: fixes #1497 and more

--- a/docs/specs/source_1_lazy.tex
+++ b/docs/specs/source_1_lazy.tex
@@ -54,9 +54,7 @@ not for any arguments of primitive functions or operators.
 
 \input source_typing
 
-\section{Standard Libraries}
-
-The following libraries are always available in this language.
+\input source_standard
 
 \input source_misc
 
