--- a/docs/specs/source_2.tex
+++ b/docs/specs/source_2.tex
@@ -37,9 +37,7 @@ Compared to Source \S 1, Source \S 2 has the following changes:
 
 \input source_typing
 
-\section{Standard Libraries}
-
-The following libraries are always available in this language.
+\input source_standard
 
 \input source_misc
 
