--- a/docs/specs/source_3.tex
+++ b/docs/specs/source_3.tex
@@ -53,9 +53,7 @@ arguments of any type
 
 \input source_typing_3
 
-\section{Standard Libraries}
-
-The following libraries are always available in this language.
+\input source_standard
 
 \input source_misc
 
