--- a/docs/specs/source_3_concurrent.tex
+++ b/docs/specs/source_3_concurrent.tex
@@ -77,9 +77,7 @@ of the concurrency.
 
 \input source_typing_3
 
-\section{Standard Libraries}
-
-The following libraries are always available in this language.
+\input source_standard
 
 \input source_misc
 
