--- a/docs/specs/source_3_nondet.tex
+++ b/docs/specs/source_3_nondet.tex
@@ -52,9 +52,7 @@ Source \S 3 Non-Det currently does not support import directives.
 
 \input source_typing_3
 
-\section{Standard Libraries}
-
-The following libraries are always available in this language.
+\input source_standard
 
 \input source_misc
 
