--- a/docs/specs/source_4_explicitcontrol.tex
+++ b/docs/specs/source_4_explicitcontrol.tex
@@ -40,9 +40,7 @@ Source \S 4 Explicit-Control is a variant of Source \S 4 that uses the CSE Machi
 
 \input source_typing_3
 
-\section{Standard Libraries}
-
-The following libraries are always available in this language.
+\input source_standard
 
 \input source_misc
 
