--- a/docs/specs/source_1.tex
+++ b/docs/specs/source_1.tex
@@ -29,9 +29,7 @@
 
 \input source_typing
 
-\section{Standard Libraries}
-
-The following libraries are always available in this language.
+\input source_standard
 
 \input source_misc
 
