--- a/docs/specs/source_2_lazy.tex
+++ b/docs/specs/source_2_lazy.tex
@@ -57,9 +57,7 @@ not for any arguments of other primitive functions or operators.
 
 \input source_typing
 
-\section{Standard Libraries}
-
-The following libraries are always available in this language.
+\input source_standard
 
 \input source_misc
 
