--- a/docs/specs/source_2_typed.tex
+++ b/docs/specs/source_2_typed.tex
@@ -33,9 +33,7 @@ Source \S 2 Typed is a variant of Source \S 2 that introduces type syntax and ty
 
 \input source_typing
 
-\section{Standard Libraries}
-
-The following libraries are always available in this language.
+\input source_standard
 
 \input source_misc
 
