--- a/docs/specs/source_3_typed.tex
+++ b/docs/specs/source_3_typed.tex
@@ -35,9 +35,7 @@ Source \S 3 Typed is a variant of Source \S 3 that introduces type syntax and ty
 
 \input source_typing_3
 
-\section{Standard Libraries}
-
-The following libraries are always available in this language.
+\input source_standard
 
 \input source_misc
 
