--- a/docs/specs/source_4.tex
+++ b/docs/specs/source_4.tex
@@ -43,9 +43,7 @@ Section ``Interpreter Support'' below.
 
 \input source_typing_3
 
-\section{Standard Libraries}
-
-The following libraries are always available in this language.
+\input source_standard
 
 \input source_misc
 
