--- a/docs/specs/source_4_gpu.tex
+++ b/docs/specs/source_4_gpu.tex
@@ -41,9 +41,7 @@ than Source \S 4 for heavy CPU bound tasks (matrix multiplication of large matri
 
 \input source_typing_3
 
-\section{Standard Libraries}
-
-The following libraries are always available in this language.
+\input source_standard
 
 \input source_misc
 
