work in progress

--- a/docs/specs/source_1.tex
+++ b/docs/specs/source_1.tex
@@ -31,9 +31,8 @@
 
 \input source_standard
 
-\input source_misc
-
-\input source_math
+The standard library for Source \S\ 1 is documented in
+\href{}{online documentation of Source \S\ 1}.
 
 \input source_js_differences
 
