--- a/docs/specs/source_standard.tex
+++ b/docs/specs/source_standard.tex
@@ -1,6 +1,7 @@
-\section{Standard Libraries}
+\section{Standard Library}
 
-The following libraries are always available in this language.
+The standard library contains constants and functions
+that are always available in this language.
 The functions indicated as \emph{primitive} are built into the
 language implementations. All others are considered
 \emph{predeclared} and implemented using the primitive functions.
