--- a/docs/specs/source_array_support.tex
+++ b/docs/specs/source_array_support.tex
@@ -5,9 +5,10 @@ The following array processing functions are supported:
 \begin{itemize}
 \item \lstinline{array_length(x)}: \textit{primitive}, returns
   the current length of array \lstinline{x}, which is 1 plus the
-highest index \lstinline{i} that has been used so far in an array assignment on \lstinline{x}.
+highest index \lstinline{i} that has been used so far in an array assignment on \lstinline{x}; time: $\Theta(1)$, space: $\Theta(1)$.
 \item \lstinline{is_array(x)}: \textit{primitive}, returns
-  returns \texttt{true} if \texttt{x} is an array, and \texttt{false} if it is not.
+  returns \texttt{true} if \texttt{x} is an array, and \texttt{false} if it is not;
+  time: $\Theta(1)$, space: $\Theta(1)$.
 \end{itemize}
 
   
