Change order of names in title page

--- a/docs/specs/source_python_1.tex
+++ b/docs/specs/source_python_1.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	\docheader{2024}{Python}{\S 1}{Ken Jin, Han Yizhan, Tan Jia Jun, Martin Henz}
+	\docheader{2024}{Python}{\S 1}{Han Yizhan, Tan Jia Jun, Ooi Ken Jin, Martin Henz}
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \input source_python_intro.tex
