--- a/docs/specs/source_python_math.tex
+++ b/docs/specs/source_python_math.tex
@@ -9,7 +9,9 @@ JavaScript
 \texttt{Math} library, see\\
 \href{https://www.ecma-international.org/ecma-262/9.0/index.html\#sec-math-object}{\color{DarkBlue}ECMAScript Specification, Section 20.2}. Examples:
 \begin{itemize}
-\item \verb#math_PI#: \textit{primitive}, refers to the mathematical constant $\pi$,
+\item \verb#math_nan#: \textit{primitive}, refers to the NaN (``Not a Number'') value,
+\item \verb#math_inf#: \textit{primitive}, refers to the Infinity value,
+\item \verb#math_pi#: \textit{primitive}, refers to the mathematical constant $\pi$,
 \item \verb#math_sqrt#\texttt{(n)}: \textit{primitive}, returns the square root of the \emph{number} \texttt{n}.
 \end{itemize}
 \end{itemize}
